add: model with no-pooling, head/tail hidden states of bilstm are used

--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
-  "device_number": "0",
+  "device_number": "4",
   "raw_dataset_path": "./build/",
   "fasttext_model_file": "/home/pugachev/models_fasttext/wiki.en",
-  "save_folder": "./rm",
-  "fasttext_embeddings_dict": "rm_wiki.emb",
+  "save_folder": "./model_insurance_random_poolno_ep500",
+  "fasttext_embeddings_dict": "insurance_random.emb",
   "max_sequence_length": 200,
   "embedding_dim": 300,
   "batch_size": 256,
   "val_batch_size": 1024,
   "test_batch_size": 1024,
   "seed": 243,
-  "epoch_num": 200,
-  "learning_rate": 1e-1,
+  "epoch_num": 500,
+  "learning_rate": 1e-2,
   "hidden_dim": 200,
   "recdrop_val": 0.0,
   "inpdrop_val": 0.0,
@@ -26,6 +26,7 @@
   "type_of_weights": "shared",
   "type_of_loss": "triplet_hinge",
   "sampling": "random",
+  "pooling": "no",
   "metrics": ["rank_response", "rank_context",
     "r_at_1", "r_at_2", "r_at_5",
     "map_at_1_full", "map_at_1_relevant",
