fix: fix dimensionality of inputs at the entrance of maxpool_cosine_score_model and maxpool_sigmoid_score_model functions

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "device_number": "0",
   "raw_dataset_path": "./build/",
-  "fasttext_model_file": "/home/pugachev/models_fasttext/wiki.en",
+  "fasttext_model_file": "/home/leonid/models_fasttext/model_insurance_sg_300.bin",
   "save_folder": "./rm",
   "fasttext_embeddings_dict": "rm_wiki.emb",
   "max_sequence_length": 200,
