feat: add word2vec embeddings model

--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
   "device_number": "0",
   "raw_dataset_path": "./build/",
-  "fasttext_model_file": "/home/pugachev/models_fasttext/wiki.en",
   "save_folder": "./rm",
-  "fasttext_embeddings_dict": "rm_wiki.emb",
+  "embeddings": "word2vec",
+  "embeddings_model_file": "/home/leonid/models_word2vec/insurance_word2vec",
+  "embeddings_dict": "insurance_w2v.emb",
   "max_sequence_length": 200,
-  "embedding_dim": 300,
+  "embedding_dim": 100,
   "batch_size": 256,
   "val_batch_size": 1024,
   "test_batch_size": 1024,
