--- a/config.json
+++ b/config.json
@@ -5,8 +5,10 @@
   "embeddings": "word2vec",
   "embeddings_model_file": "/home/pugachev/models_word2vec/insurance_word2vec",
   "embeddings_dict": "insurance_w2v.emb",
-  "max_sequence_length": 200,
   "embedding_dim": 100,
+  "max_sequence_length": 200,
+  "padding": "post",
+  "truncating": "post",
   "batch_size": 256,
   "val_batch_size": 1024,
   "test_batch_size": 1024,
