feat: add insurance v1 to DataReader class, add metrics taking into account multiple correct answers

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "device_number": "0",
-  "raw_dataset_path": "./build/",
+  "raw_dataset_path": "./build/insurance_v1/",
   "save_folder": "./rm",
   "embeddings": "word2vec",
-  "embeddings_model_file": "/home/pugachev/models_word2vec/insurance_word2vec",
-  "embeddings_dict": "insurance_w2v.emb",
+  "embeddings_model_file": "/home/pugachev/models_word2vec/insurance_v1_word2vec",
+  "embeddings_dict": "insurance_v1_w2v.emb",
   "embedding_dim": 100,
   "max_sequence_length": 200,
   "padding": "post",
@@ -22,20 +22,24 @@
   "ldrop_val": 0.0,
   "dropout_val": 0.0,
   "margin": 0.2,
-  "num_negative_samples": 499,
+  "num_negative_samples": 500,
   "num_ranking_samples_valid": 499,
   "num_ranking_samples_test": 499,
   "optimizer_name": "SGD",
-  "dataset_name": "insurance",
+  "dataset_name": "insurance_v1",
   "type_of_weights": "shared",
   "type_of_loss": "triplet_hinge",
   "sampling": "random",
+  "sample_candidates": "global",
+  "sample_candidates_valid": "pool",
+  "sample_candidates_test": "pool",
   "recurrent": "bilstm",
   "pooling": "max",
   "metrics": ["rank_response", "rank_context",
     "r_at_1", "r_at_2", "r_at_5",
     "map_at_1_full", "map_at_1_relevant",
-    "diff_top", "diff_answer"],
+    "diff_top", "diff_answer",
+    "rank_response_set", "r_at_1_set"],
   "callbacks": ["ModelCheckpoint", "TensorBoard", "CSVLogger"]
 }
 
