--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
   "epoch_num_valid": 500,
   "learning_rate": 1e-1,
   "hidden_dim": 200,
+  "emb_drop_val": 0.0,
   "recdrop_val": 0.0,
   "inpdrop_val": 0.0,
   "ldrop_val": 0.0,
