chore: change some parameters default values

--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
   "val_batch_size": 1024,
   "test_batch_size": 1024,
   "seed": 243,
-  "epoch_num": 500,
-  "epoch_num_valid": 500,
-  "learning_rate": 1e-1,
+  "epoch_num": 100,
+  "epoch_num_valid": 100,
+  "learning_rate": 1e-3,
   "hidden_dim": 200,
   "emb_drop_val": 0.0,
   "recdrop_val": 0.0,
@@ -27,7 +27,7 @@
   "num_negative_samples": 500,
   "num_ranking_samples_valid": 499,
   "num_ranking_samples_test": 499,
-  "optimizer_name": "SGD",
+  "optimizer_name": "Adam",
   "dataset_name": "insurance_v1",
   "type_of_weights": "shared",
   "type_of_loss": "triplet_hinge",
