feat: add standard functions to read dataset, add faq sber dataset support in the DataReader class

--- a/config.json
+++ b/config.json
@@ -1,20 +1,21 @@
 {
   "device_number": "0",
-  "raw_dataset_path": "./build/insurance_v1/",
+  "raw_dataset_path": "./build/faq_sber_v3/",
+  "labels": true,
   "save_folder": "./rm",
   "embeddings": "word2vec",
-  "embeddings_model_file": "/home/pugachev/models_word2vec/insurance_v1_word2vec",
-  "embeddings_dict": "insurance_v1_w2v.emb",
+  "embeddings_model_file": "/home/pugachev/models_word2vec/faq_sber_train_test_word2vec",
+  "embeddings_dict": "faq_sber_train_test_w2v.emb",
   "embedding_dim": 100,
-  "max_sequence_length": 250,
+  "max_sequence_length": 57,
   "padding": "post",
   "truncating": "post",
-  "batch_size": 256,
-  "val_batch_size": 1024,
-  "test_batch_size": 1024,
+  "batch_size": 64,
+  "val_batch_size": 8,
+  "test_batch_size": 8,
   "seed": 243,
-  "epoch_num": 100,
-  "epoch_num_valid": 100,
+  "epoch_num": 1,
+  "epoch_num_valid": 1,
   "learning_rate": 1e-3,
   "hidden_dim": 300,
   "emb_drop_val": 0.0,
@@ -25,14 +26,15 @@
   "maxpool_drop_val": 0.0,
   "margin": 0.2,
   "num_negative_samples": 500,
-  "num_ranking_samples_valid": 499,
-  "num_ranking_samples_test": 499,
+  "num_ranking_samples_valid": 10,
+  "num_ranking_samples_test": 10,
   "optimizer_name": "Adam",
-  "dataset_name": "insurance_v1",
+  "dataset_name": "faq_sber_v3",
   "type_of_weights": "shared",
   "type_of_loss": "triplet_hinge",
   "sampling": "random",
   "sample_candidates": "global",
+  "sample_candidates_valid_train": "global",
   "sample_candidates_valid": "pool",
   "sample_candidates_test": "pool",
   "recurrent": "bilstm",
